--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,72 @@
     <meta charset="UTF-8">
     <title>Welcome</title>
 </head>
-<body>
-Hello, World!
-</body>
+    <body>
+        <header id="top">
+            <h1>Welcome to Veridian Dynamics!</h1>
+            <p>At Veridian Dynamics, we solve <em>your</em> problems with <em>technology</em></p>
+        </header>
+        <hr>
+        <main>
+            <section class="about-us">
+                <h2>Core Values</h2>
+                <ul>
+                    <li>Competence</li>
+                    <li>Involvement</li>
+                    <li>Technology</li>
+                </ul>
+                <h2>Our Process</h2>
+                <ol>
+                    <li>Plan</li>
+                    <li>Evaluate</li>
+                    <li>Implement</li>
+                </ol>
+                <h2>2020 Vision</h2>
+                <ul>
+                    <li>Become #1 in Technology</li>
+                    <li>Increase success by 20%</li>
+                    <li>Increase Business by 30%</li>
+                </ul>
+                <hr>
+            </section>
+            <section class="vision">
+                <h2>Company Vision</h2>
+                <img src="img/welcome/pexels-andy-vu-3244513.jpg" width="600"/>
+                <img src="img/welcome/pexels-trushotz-3635300.jpg" width="600"/>
+                <img src="img/welcome/pexels-sam-kolder-2387873.jpg" width="600"/>
+                <img src="img/welcome/pexels-jeremy-bishop-2422915.jpg" width="600"/>
+            </section>
+            <section class="pricing">
+                <h2>Our Product</h2>
+                <table>
+                    <tr>
+                        <th>Plan</th>
+                        <th>Price</th>
+                        <th>Features</th>
+                    </tr>
+                    <tr>
+                        <td>Starter</td>
+                        <td>$99</td>
+                        <td>Base Technology</td>
+                    </tr>
+                    <tr>
+                        <td>Advanced</td>
+                        <td>$199</td>
+                        <td>Additional Features</td>
+                    </tr>
+                    <tr>
+                        <td>Premium</td>
+                        <td>$499</td>
+                        <td>Unlimited Support</td>
+                    </tr>
+                </table>
+            </section>
+        </main>
+        <footer>
+            <p><em>All products come with our quality guarantee &trade;</em>.</p>
+        </footer>
+        <nav>
+            <a href="#top">Go to the top of the page.</a>
+        </nav>
+    </body>
 </html>
