refined labels for forms

--- a/forms.html
+++ b/forms.html
@@ -15,18 +15,18 @@
     <label for="bio"><h3>Tell us about yourself</h3></label>
     <textarea id="bio" name="bio" placeholder="Write a brief bio here..."></textarea>
 
-    <label><h3>How did you hear about us?</h3></label>
-    <label>
-      <input type=checkbox name="howDidYouHear" value="billboard">Billboard
+    <label for="questionTwo"><h3 id="questionTwo">How did you hear about us?</h3></label>
+    <label for="billboard">
+      <input type=checkbox name="howDidYouHear" value="billboard" id="billboard">Billboard
       </label><br>
-    <label>
-      <input type="checkbox" name="howDidYouHear" value="radio advertisement">Radio Advertisement
+    <label for="radioAdvertisement">
+      <input type="checkbox" name="howDidYouHear" value="radioAdvertisement" id="radioAdvertisement">Radio Advertisement
     </label><br>
-    <label>
-      <input type="checkbox" name="howDidYouHear" value="internet advertisement">Internet Advertisement
+    <label for="internetAdvertisement">
+      <input type="checkbox" name="howDidYouHear" value="internetAdvertisement" id="internetAdvertisement">Internet Advertisement
     </label><br>
-    <label>
-      <input type="checkbox" name="howDidYouHear" value="other">Other
+    <label for="other">
+      <input type="checkbox" name="howDidYouHear" value="other" id="other">Other
     </label>
 
     <label for="browser"><h3>What browser are you using?</h3></label>
