--- a/github.html
+++ b/github.html
@@ -9,7 +9,7 @@
 <body>
 <header>
   <nav aria-label=’first’>
-    <img src="img/github/30x30.svg" alt="GitHub Logo">
+    <img src="img/30x30.svg" alt="GitHub Logo">
     <ul>
       <li><a href="">Pull Requests</a></li>
       <li><a href="">Issues</a></li>
@@ -17,7 +17,7 @@
       <li><a href="">Explore</a></li>
     </ul>
   </nav>
-  <img src="img/github/23344937.png" height="30" alt="Codeup Logo"/>
+  <img src="img/23344937.png" height="30" alt="Codeup Logo"/>
 </header>
 
 <nav aria-label=second’>
@@ -35,19 +35,19 @@
     <table>
       <caption><strong>Codeup's dev team</strong></caption>
       <tr>
-        <td><img src="img/github/48x48.svg" alt="Profile Photo: Kent Beck"></td>
+        <td><img src="img/48x48.svg" alt="Profile Photo: Kent Beck"></td>
         <td><a href="">Kent Beck</a><br>KentBeck</td>
         <td>Member</td>
         <td>1 team</td>
       </tr>
       <tr>
-        <td><img src="img/github/48x48.svg" alt="Profile Photo:Codeup Instructors"></td>
+        <td><img src="img/48x48.svg" alt="Profile Photo:Codeup Instructors"></td>
         <td><a href="">Codeup Instruction Staff</a><br>CodeupInstructors</td>
         <td>Member</td>
         <td>1 team</td>
       </tr>
       <tr>
-        <td><img src="img/github/48x48.svg" alt="Profile Photo: Martin Fowler"></td>
+        <td><img src="img/48x48.svg" alt="Profile Photo: Martin Fowler"></td>
         <td><a href="">Martin Fowler</a></td>
         <td>Member</td>
         <td>0 teams</td>
