added css sheet to file

--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
         <header id="top">
-            <h1>Welcome to Veridian Dynamics!</h1>
+            <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
             <p>At Veridian Dynamics, we solve <em>your</em> problems with <em>technology</em></p>
         </header>
         <hr>
@@ -34,10 +35,10 @@
             </section>
             <section class="vision">
                 <h2>Company Vision</h2>
-                <img src="img/welcome/pexels-andy-vu-3244513.jpg" width="600"/>
-                <img src="img/welcome/pexels-trushotz-3635300.jpg" width="600"/>
-                <img src="img/welcome/pexels-sam-kolder-2387873.jpg" width="600"/>
-                <img src="img/welcome/pexels-jeremy-bishop-2422915.jpg" width="600"/>
+                <img src="img/pexels-andy-vu-3244513.jpg" width="600"/>
+                <img src="img/pexels-trushotz-3635300.jpg" width="600"/>
+                <img src="img/pexels-sam-kolder-2387873.jpg" width="600"/>
+                <img src="img/pexels-jeremy-bishop-2422915.jpg" width="600"/>
             </section>
             <section class="pricing">
                 <h2>Our Product</h2>
