--- a/welcome.html
+++ b/welcome.html
@@ -9,24 +9,23 @@
         <header id="top">
             <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
             <p>At Veridian Dynamics, we solve <em>your</em> problems with <em>technology</em></p>
+            <hr>
         </header>
-        <hr>
         <main>
             <section class="about-us">
-                <h2>Core Values</h2>
                 <ul>
+                    <h2>Core Values</h2>
                     <li>Competence</li>
                     <li>Involvement</li>
                     <li>Technology</li>
                 </ul>
-                <h2>Our Process</h2>
                 <ol>
+                    <h2>Our Process</h2>
                     <li>Plan</li>
                     <li>Evaluate</li>
                     <li>Implement</li>
                 </ol>
-                <h2>2020 Vision</h2>
-                <ul>
+                <ul><h2>2020 Vision</h2>
                     <li>Become #1 in Technology</li>
                     <li>Increase success by 20%</li>
                     <li>Increase Business by 30%</li>
