--- a/welcome.html
+++ b/welcome.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+<!--linking google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+<!--linking stylesheet-->
     <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
         <header id="top">
             <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
             <p>At Veridian Dynamics, we solve <em>your</em> problems with <em>technology</em></p>
-            <hr>
         </header>
+        <hr>
         <main>
             <section class="about-us">
                 <ul>
@@ -30,8 +35,10 @@
                     <li>Increase success by 20%</li>
                     <li>Increase Business by 30%</li>
                 </ul>
-                <hr>
             </section>
+
+            <hr>
+
             <section class="vision">
                 <h2>Company Vision</h2>
                 <img src="img/pexels-andy-vu-3244513.jpg" width="600"/>
@@ -39,9 +46,10 @@
                 <img src="img/pexels-sam-kolder-2387873.jpg" width="600"/>
                 <img src="img/pexels-jeremy-bishop-2422915.jpg" width="600"/>
             </section>
+
             <section class="pricing">
-                <h2>Our Product</h2>
                 <table>
+                    <caption>Our Product</caption>
                     <tr>
                         <th>Plan</th>
                         <th>Price</th>
@@ -65,9 +73,11 @@
                 </table>
             </section>
         </main>
+
         <footer>
             <p><em>All products come with our quality guarantee &trade;</em>.</p>
         </footer>
+
         <nav>
             <a href="#top">Go to the top of the page.</a>
         </nav>
