--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox Nav</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Work Sans">
+    <link rel="stylesheet" href="css/flexbox-nav-exercise.css">
 </head>
 <body>
+<nav>
+  <ul class="container">
+    <li><a href="#">Articles</a></li>
+    <li><a href="#">Products</a></li>
+    <li><a href="#">Market</a></li>
+      <li><a href="#">Jobs</a></li>
+    <li><a href="#" id="logo">Logo</a></li>
+    <li><a href="#">Follow Us</a></li>
+      <li><a href="#"><i class="material-icons">&#xe8b6;</i></a></li>
+      <li><a href="#"><i class="material-icons">&#xe8cc;</i></a></li>
+      <li><a href="#"><i class="material-icons">&#xe88e;</i></a></li>
+  </ul>
+</nav>
+
 
 </body>
 </html>
