--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -10,17 +10,24 @@
 </head>
 <body>
 <nav>
-  <ul class="container">
-    <li><a href="#">Articles</a></li>
-    <li><a href="#">Products</a></li>
-    <li><a href="#">Market</a></li>
-      <li><a href="#">Jobs</a></li>
-    <li><a href="#" id="logo">Logo</a></li>
-    <li><a href="#">Follow Us</a></li>
-      <li><a href="#"><i class="material-icons">&#xe8b6;</i></a></li>
-      <li><a href="#"><i class="material-icons">&#xe8cc;</i></a></li>
-      <li><a href="#"><i class="material-icons">&#xe88e;</i></a></li>
-  </ul>
+    <div class="container">
+        <ul class="list_one">
+            <li><a href="#">Articles</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Market</a></li>
+            <li><a href="#">Jobs</a></li>
+        </ul>
+
+        <a href="#" id="logo">Logo</a>
+
+        <ul class="list_two">
+            <li><a href="#">Follow Us</a></li>
+            <li><a href="#"><i class="material-icons">&#xe8b6;</i></a></li>
+            <li><a href="#"><i class="material-icons">&#xe8cc;</i></a></li>
+            <li><a href="#"><i class="material-icons">&#xe88e;</i></a></li>
+        </ul>
+
+    </div>
 </nav>
 
 
