--- a/order-pizza.html
+++ b/order-pizza.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/376cc6886e.js" crossorigin="anonymous"></script>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Your custom css styles go here -->
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
 <!--NavBar-->
@@ -34,6 +35,13 @@
         </div>
     </div>
 </nav>
+
+<!-- Main Container-->
+<div class="container">
+    <div class="jumbotron d-flex align-items-center">
+        <div class="opacity-75 bg-light flex-fill text-center display-4">Welcome to Pizza World!</div>
+    </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Your custom JS goes here -->
