--- a/order-pizza.html
+++ b/order-pizza.html
@@ -48,6 +48,7 @@
     <h2>Build your own pizza!</h2>
 
     <!--tabs -->
+    <!--Tab buttons-->
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
             <button class="nav-link active" id="size-tab" data-bs-toggle="tab" data-bs-target="#size" type="button" role="tab" aria-controls="size" aria-selected="true">Size and Crust</button>
@@ -59,6 +60,7 @@
             <button class="nav-link" id="toppins-tab" data-bs-toggle="tab" data-bs-target="#toppings" type="button" role="tab" aria-controls="toppings" aria-selected="false">Toppings</button>
         </li>
     </ul>
+    <!--Tab content-->
     <div class="tab-content" id="myTabContent">
         <!--size and crust-->
         <div class="tab-pane fade show active" id="size" role="tabpanel" aria-labelledby="size-tab">
@@ -127,6 +129,7 @@
                 <button>Next Step ></button>
             </div>
         </div>
+        <!--Cheese and Sauce-->
         <div class="tab-pane fade" id="cheese" role="tabpanel" aria-labelledby="cheese-tab">
             <!--Title-->
             <div>Choose Cheese and Sauce</div>
@@ -189,9 +192,78 @@
                 </div>
             </div>
             <!--Footer-->
-
+            <div>
+                <!--this will be a button group-->
+                <button>Previous</button>
+                <button>Next ></button>
+            </div>
         </div>
-        <div class="tab-pane fade" id="toppings" role="tabpanel" aria-labelledby="toppings-tab">...</div>
+        <!--Toppings-->
+        <div class="tab-pane fade" id="toppings" role="tabpanel" aria-labelledby="toppings-tab">
+            <!--Title-->
+            <div>Choose Toppings</div>
+            <!--Meats-->
+            <div>
+                <div class="row">
+                    <div class="col">
+                        Choose Meats
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Check box for beef
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Check box for ham
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Check box for philly
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Check box for bacon
+                    </div>
+                </div>
+            </div>
+            <!--Non-meats-->
+            <div>
+                <div class="row">
+                    <div class="col">
+                        Choose Non-Meats
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Check box for gp
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Check box for mush
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Check box for onions
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Check box for jp
+                    </div>
+                </div>
+
+            </div>
+            <!--Footer-->
+            <div>
+                <button>Checkout</button>
+            </div>
+        </div>
     </div>
 
 </div>
