--- a/order-pizza.html
+++ b/order-pizza.html
@@ -211,22 +211,42 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        Check box for beef
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="beef" id="beef" name="meat">
+                            <label class="form-check-label" for="beef">
+                                Beef
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        Check box for ham
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="ham" id="ham" name="meat">
+                            <label class="form-check-label" for="ham">
+                                Ham
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        Check box for philly
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="philly" id="philly" name="meat">
+                            <label class="form-check-label" for="philly">
+                                Philly Steak
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        Check box for bacon
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="bacon" id="bacon" name="meat">
+                            <label class="form-check-label" for="bacon">
+                                Bacon
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
