checkboxes added for nonmeants

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -259,22 +259,42 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        Check box for gp
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="green-peppers" id="green-peppers" name="non-meat">
+                            <label class="form-check-label" for="green-peppers">
+                                Green Peppers
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        Check box for mush
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="mushrooms" id="mushrooms" name="non-meat">
+                            <label class="form-check-label" for="mushrooms">
+                                Mushrooms
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        Check box for onions
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="onions" id="onions" name="non-meat">
+                            <label class="form-check-label" for="onions">
+                                Onions
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        Check box for jp
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="jal-peppers" id="jal-peppers" name="non-meat">
+                            <label class="form-check-label" for="jal-peppers">
+                                Jalapeno Peppers
+                            </label>
+                        </div>
                     </div>
                 </div>
 
