first tab style complete

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 <!--need to change color of nav bar-->
+<!--next buttons need functionality-->
+<!--tabs need color change of text-->
 
 <!--NavBar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -63,69 +65,69 @@
     <!--Tab content-->
     <div class="tab-content" id="myTabContent">
         <!--size and crust-->
-        <div class="tab-pane fade show active" id="size" role="tabpanel" aria-labelledby="size-tab">
+        <div class="tab-pane fade show active border" id="size" role="tabpanel" aria-labelledby="size-tab">
             <!--Title-->
-            <div>Choose Size and Crust</div>
+            <div class="bg-primary text-white p-2">Choose Size and Crust</div>
             <!--hand tossed-->
-            <div>
+            <div class="m-3 mx-4">
                 <div class="row">
-                    <div class="col">
+                    <div class="col bg-light border p-1 ps-2">
                         Hand Tossed
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         Garlic seasoned crust with a rich, buttery taste
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <input class="form-check-input" type="radio" name="pizza-size" id="tossed-small">
                         <label class="form-check-label" for="tossed-small">
-                            Small
+                            Small (10")
                         </label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <input class="form-check-input" type="radio" name="pizza-size" id="tossed-medium">
                         <label class="form-check-label" for="tossed-medium">
-                            medium
+                            Medium (12")
                         </label>
                     </div>
                 </div>
             </div>
             <!--crispy thing-->
-            <div>
+            <div class="m-3 mx-4">
                 <div class="row">
-                    <div class="col">
+                    <div class="col bg-light p-1 ps-2 border">
                         Crispy Thin
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         Thin enough for optimum crispy to crunchy ratio.
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <input class="form-check-input" type="radio" name="pizza-size" id="thin-medium">
                         <label class="form-check-label" for="thin-medium">
-                            Medium
+                            Medium (12")
                         </label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <input class="form-check-input" type="radio" name="pizza-size" id="thin-large">
                         <label class="form-check-label" for="thin-large">
-                            large
+                            Large (14")
                         </label>
                     </div>
                 </div>
             </div>
             <!--Footer Nav-->
-            <div>
+            <div class="bg-light border p-2">
                 <button>Next Step ></button>
             </div>
         </div>
