--- a/order-pizza.html
+++ b/order-pizza.html
@@ -132,24 +132,24 @@
             </div>
         </div>
         <!--Cheese and Sauce-->
-        <div class="tab-pane fade" id="cheese" role="tabpanel" aria-labelledby="cheese-tab">
+        <div class="tab-pane fade border" id="cheese" role="tabpanel" aria-labelledby="cheese-tab">
             <!--Title-->
-            <div>Choose Cheese and Sauce</div>
+            <div class="bg-primary text-white p-2">Choose Cheese and Sauce</div>
             <!--Cheese-->
-            <div>
+            <div class="m-3 mx-4">
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border bg-light">
                         Cheese
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         How much?
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
-                        <select name="cheese-amount" id="cheese-amount">
+                    <div class="col p-1 ps-2 border">
+                        <select name="cheese-amount" id="cheese-amount" class="form-select p-1 ps-2">
                             <option value="light">Light</option>
                             <option value="normal" selected>Normal</option>
                             <option value="heavy">Heavy</option>
@@ -158,20 +158,20 @@
                 </div>
             </div>
             <!--Sauce-->
-            <div>
+            <div class="m-3 mx-4">
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border bg-light">
                         Sauce
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         What Type
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
-                        <select name="sauce-type" id="sauce-type">
+                    <div class="col p-1 ps-2 border">
+                        <select name="sauce-type" id="sauce-type" class="form-select p-1 ps-2">
                             <option value="light">Light</option>
                             <option value="tomato" selected>Needs options</option>
                             <option value="heavy">Heavy</option>
@@ -179,13 +179,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         How Much?
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
-                        <select name="sauce-amount" id="sauce-amount">
+                    <div class="col p-1 ps-2 border">
+                        <select name="sauce-amount" id="sauce-amount" class="form-select p-1 ps-2">
                             <option value="light">Light</option>
                             <option value="normal" selected>Needs options</option>
                             <option value="heavy">Heavy</option>
@@ -194,7 +194,7 @@
                 </div>
             </div>
             <!--Footer-->
-            <div>
+            <div class="bg-light border p-2">
                 <!--this will be a button group-->
                 <button>Previous</button>
                 <button>Next ></button>
