--- a/order-pizza.html
+++ b/order-pizza.html
@@ -53,13 +53,13 @@
     <!--Tab buttons-->
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="size-tab" data-bs-toggle="tab" data-bs-target="#size" type="button" role="tab" aria-controls="size" aria-selected="true">Size and Crust</button>
+            <button class="nav-link active" id="size-tab" data-bs-toggle="tab" data-bs-target="#size" type="button" role="tab" aria-controls="size" aria-selected="true"><small class=" rounded-circle bg-secondary p-1 px-2 text-white me-1">1</small>Size and Crust</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="cheese-tab" data-bs-toggle="tab" data-bs-target="#cheese" type="button" role="tab" aria-controls="cheese" aria-selected="false">Cheese and Sauce</button>
+            <button class="nav-link" id="cheese-tab" data-bs-toggle="tab" data-bs-target="#cheese" type="button" role="tab" aria-controls="cheese" aria-selected="false"><small class=" rounded-circle bg-secondary p-1 px-2 text-white me-1">2</small>Cheese and Sauce</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="toppins-tab" data-bs-toggle="tab" data-bs-target="#toppings" type="button" role="tab" aria-controls="toppings" aria-selected="false">Toppings</button>
+            <button class="nav-link" id="toppins-tab" data-bs-toggle="tab" data-bs-target="#toppings" type="button" role="tab" aria-controls="toppings" aria-selected="false"><small class=" rounded-circle bg-secondary p-1 px-2 text-white me-1">3</small>Toppings</button>
         </li>
     </ul>
     <!--Tab content-->
@@ -201,18 +201,18 @@
             </div>
         </div>
         <!--Toppings-->
-        <div class="tab-pane fade" id="toppings" role="tabpanel" aria-labelledby="toppings-tab">
+        <div class="tab-pane fade border" id="toppings" role="tabpanel" aria-labelledby="toppings-tab">
             <!--Title-->
-            <div>Choose Toppings</div>
+            <div class="bg-primary text-white p-2">Choose Toppings</div>
             <!--Meats-->
-            <div>
+            <div class="m-3 mx-4">
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border bg-light">
                         Choose Meats
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="beef" id="beef" name="meat">
                             <label class="form-check-label" for="beef">
@@ -222,7 +222,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="ham" id="ham" name="meat">
                             <label class="form-check-label" for="ham">
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="philly" id="philly" name="meat">
                             <label class="form-check-label" for="philly">
@@ -242,7 +242,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="bacon" id="bacon" name="meat">
                             <label class="form-check-label" for="bacon">
@@ -253,14 +253,14 @@
                 </div>
             </div>
             <!--Non-meats-->
-            <div>
+            <div class="m-3 mx-4">
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border bg-light">
                         Choose Non-Meats
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="green-peppers" id="green-peppers" name="non-meat">
                             <label class="form-check-label" for="green-peppers">
@@ -270,7 +270,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="mushrooms" id="mushrooms" name="non-meat">
                             <label class="form-check-label" for="mushrooms">
@@ -280,7 +280,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="onions" id="onions" name="non-meat">
                             <label class="form-check-label" for="onions">
@@ -290,7 +290,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col p-1 ps-2 border">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="jal-peppers" id="jal-peppers" name="non-meat">
                             <label class="form-check-label" for="jal-peppers">
@@ -302,7 +302,7 @@
 
             </div>
             <!--Footer-->
-            <div>
+            <div class="bg-light border p-2">
                 <button>Checkout</button>
             </div>
         </div>
