switched tab 1 to a card

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -66,70 +66,110 @@
     <div class="tab-content" id="myTabContent">
         <!--size and crust-->
         <div class="tab-pane fade show active border" id="size" role="tabpanel" aria-labelledby="size-tab">
-            <!--Title-->
-            <div class="bg-primary text-white p-2">Choose Size and Crust</div>
-            <!--hand tossed-->
-            <div class="m-3 mx-4">
-                <div class="row">
-                    <div class="col bg-light border p-1 ps-2">
-                        Hand Tossed
+            <!--Main card-->
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    Choose Size and Crust
+                </div>
+                <div class="card-body">
+                    <!--hand tossed card-->
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-header">
+                            Hand Tossed
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                        </ul>
+                    </div>
+                    <!--crispy thin card-->
+                    <div class="card mt-4" style="width: 18rem;">
+                        <div class="card-header">
+                            Crispy Thin
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        Garlic seasoned crust with a rich, buttery taste
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <input class="form-check-input" type="radio" name="pizza-size" id="tossed-small">
-                        <label class="form-check-label" for="tossed-small">
-                            Small (10")
-                        </label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <input class="form-check-input" type="radio" name="pizza-size" id="tossed-medium">
-                        <label class="form-check-label" for="tossed-medium">
-                            Medium (12")
-                        </label>
-                    </div>
-                </div>
-            </div>
-            <!--crispy thing-->
-            <div class="m-3 mx-4">
-                <div class="row">
-                    <div class="col bg-light p-1 ps-2 border">
-                        Crispy Thin
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        Thin enough for optimum crispy to crunchy ratio.
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <input class="form-check-input" type="radio" name="pizza-size" id="thin-medium">
-                        <label class="form-check-label" for="thin-medium">
-                            Medium (12")
-                        </label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <input class="form-check-input" type="radio" name="pizza-size" id="thin-large">
-                        <label class="form-check-label" for="thin-large">
-                            Large (14")
-                        </label>
-                    </div>
+                <div class="card-footer">
+                    button here
                 </div>
             </div>
-            <!--Footer Nav-->
-            <div class="bg-light border p-2 d-flex justify-content-end">
-                <button class="btn btn-primary">Next Step ></button>
-            </div>
+
+
+
+
+
+
+
+<!--            &lt;!&ndash;Title&ndash;&gt;-->
+<!--            <div class="bg-primary text-white p-2">Choose Size and Crust</div>-->
+<!--            &lt;!&ndash;hand tossed&ndash;&gt;-->
+<!--            <div class="m-3 mx-4">-->
+<!--                <div class="row">-->
+<!--                    <div class="col bg-light border p-1 ps-2">-->
+<!--                        Hand Tossed-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col p-1 ps-2 border">-->
+<!--                        Garlic seasoned crust with a rich, buttery taste-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col p-1 ps-2 border">-->
+<!--                        <input class="form-check-input" type="radio" name="pizza-size" id="tossed-small">-->
+<!--                        <label class="form-check-label" for="tossed-small">-->
+<!--                            Small (10")-->
+<!--                        </label>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col p-1 ps-2 border">-->
+<!--                        <input class="form-check-input" type="radio" name="pizza-size" id="tossed-medium">-->
+<!--                        <label class="form-check-label" for="tossed-medium">-->
+<!--                            Medium (12")-->
+<!--                        </label>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;crispy thing&ndash;&gt;-->
+<!--            <div class="m-3 mx-4">-->
+<!--                <div class="row">-->
+<!--                    <div class="col bg-light p-1 ps-2 border">-->
+<!--                        Crispy Thin-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col p-1 ps-2 border">-->
+<!--                        Thin enough for optimum crispy to crunchy ratio.-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col p-1 ps-2 border">-->
+<!--                        <input class="form-check-input" type="radio" name="pizza-size" id="thin-medium">-->
+<!--                        <label class="form-check-label" for="thin-medium">-->
+<!--                            Medium (12")-->
+<!--                        </label>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col p-1 ps-2 border">-->
+<!--                        <input class="form-check-input" type="radio" name="pizza-size" id="thin-large">-->
+<!--                        <label class="form-check-label" for="thin-large">-->
+<!--                            Large (14")-->
+<!--                        </label>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;Footer Nav&ndash;&gt;-->
+<!--            <div class="bg-light border p-2 d-flex justify-content-end">-->
+<!--                <button class="btn btn-primary">Next Step ></button>-->
+<!--            </div>-->
         </div>
         <!--Cheese and Sauce-->
         <div class="tab-pane fade border" id="cheese" role="tabpanel" aria-labelledby="cheese-tab">
